--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
           "unit": "s/m",
           "latestValue": 12120,
           "labels": [
-            {attributes: {label: "85890", type: "Important", "line-height":25, "show-line": true}, position: 85890},
-            {attributes: {label: "80000", type: "Info", "line-height":52, "show-line": true}, position: 80000}
+            {attributes: {label: "60000", type: "Warning", "line-height":28, "show-line": true, "z-index": 1}, position: 60000},
+            {attributes: {label: "12120", type: "Info", "line-height":55, "show-line": true}, position: 12120}
               ],
           "bands": [{from: 0, to: 26000, color: "yellow"}, {from: 26000, to: 80000, color: "red"}, {
             from: 80000,
